versions/v0.17/modules/en/pages/user/caapf.adoc
= Cluster API Addon Provider Fleet
:description: Enables integration with Fleet to deploy applications to CAPI clusters by configuring provider settings and feature gates, automatically annotating clusters
:revdate: 2026-09-02
:page-revdate: {revdate}

== Overview

ifeval::["{build-type}" == "product"]
Cluster API Add-on Provider for `Fleet` (CAAPF) is a Cluster API (CAPI) provider that provides integration with https://documentation.suse.com/cloudnative/continuous-delivery/v0.12/en/index.html[`Fleet`] to enable the easy deployment of applications to a CAPI-provisioned cluster.
endif::[]
ifeval::["{build-type}" == "community"]
Cluster API Add-on Provider for `Fleet` (CAAPF) is a Cluster API (CAPI) provider that provides integration with https://fleet.rancher.io/[`Fleet`] to enable the easy deployment of applications to a CAPI-provisioned cluster.
endif::[]

== Functionality

* The provider will register a newly provisioned CAPI cluster with `Fleet` by creating a `Fleet` `Cluster` instance with the same `name` and `namespace`. Applications can be automatically deployed to the created cluster using `GitOps`.
* The provider will automatically create a Fleet `ClusterGroup` for every CAPI `ClusterClass` in the `ClusterClass` namespace. This enables you to deploy the same applications to all clusters created from the same `ClusterClass`.

ifeval::["{build-type}" == "product"]
This allows a user to specify either a https://documentation.suse.com/cloudnative/continuous-delivery/latest/en/reference/ref-bundle.html[`Bundle`] resource with raw application workloads, or https://documentation.suse.com/cloudnative/continuous-delivery/latest/en/reference/ref-gitrepo.html[`GitRepo`] to install applications from git. Each of the resources can provide https://documentation.suse.com/cloudnative/continuous-delivery/latest/en/how-tos-for-users/gitrepo-targets.html#_defining_targets[`targets`] with any combination of:
endif::[]
ifeval::["{build-type}" == "community"]
This allows a user to specify either a https://fleet.rancher.io/ref-bundle[`Bundle`] resource with raw application workloads or https://fleet.rancher.io/ref-gitrepo[`GitRepo`] to install applications from git. Each of the resources can provide https://fleet.rancher.io/gitrepo-targets#defining-targets[`targets`] with any combination of:
endif::[]

[source,yaml]
----
  targets:
  - clusterGroup: <cluster-class-name> # If the cluster is created from cluster-class
  - clusterName: <a specific CAPI cluster name>
----

Additionally, `CAAPF` automatically propagates `CAPI` cluster labels to the `Fleet` cluster resource, so users can specify a target matching a common cluster label with:

[source,yaml]
----
  targets:
  - clusterSelector: <label selector for the cluster instances, inherited from CAPI clusters>
  - clusterGroupSelector: <label selector for the cluster group instances, labels inherited from ClusterClass>
----

== Example - deploying kindnet CNI

[CAUTION]
====
The following example requires `Fleet` version `>=v0.10.1-rc.1`, which is not a part of `rancher/charts` yet.
====


*Demo*:

image:https://asciinema.org/a/seEFHKz5DVpUe5CQvWcddSJBp.svg[CAAPF - deploying kindnet CNI, link=https://asciinema.org/a/seEFHKz5DVpUe5CQvWcddSJBp, window="_blank"]

[TIP]
====
For more information about the provider, please refer to https://rancher.github.io/cluster-api-addon-provider-fleet/[CAAPF book]. 
====
